.team/logs/e2e_production.log
BASE_URL environment variable is set: http://192.168.31.76:3000
Note: Update playwright.config.ts to use this URL
Starting E2E test run...
SyntaxError: /home/cmit/openprint/web/dashboard/e2e/tests/metrics.spec.ts: Unexpected token, expected ")" (88:97)

  86 |     await page.route('**/api/v1/query*', async (route) => {
  87 |       const url = route.request().url();
> 88 |       if (url.includes("rate(http_requests_total)") || url.includes("rate(http_request_duration")") || url.includes("histogram_quantile")) {
     |                                                                                                  ^
  89 |         await mockApiResponse(route, {
  90 |           status: 'success',
  91 |           data: {

   at tests/metrics.spec.ts:88

  86 |     await page.route('**/api/v1/query*', async (route) => {
  87 |       const url = route.request().url();
> 88 |       if (url.includes("rate(http_requests_total)") || url.includes("rate(http_request_duration")") || url.includes("histogram_quantile")) {
     |                                                                                                 ^
  89 |         await mockApiResponse(route, {
  90 |           status: 'success',
  91 |           data: {
SyntaxError: /home/cmit/openprint/web/dashboard/e2e/tests/monitoring.spec.ts: Missing semicolon. (164:67)

  162 |   test('should display alert severity badges', async ({ page }) => {
  163 |     await expect(page.locator('span:has-text("firing")').first()).toBeVisible();
> 164 |     await expect(page.locator('span:has-text("resolved")')).first()).toBeVisible();
      |                                                                    ^
  165 |   });
  166 |
  167 |   test('should filter alerts by severity', async ({ page }) => {

   at tests/monitoring.spec.ts:164

  162 |   test('should display alert severity badges', async ({ page }) => {
  163 |     await expect(page.locator('span:has-text("firing")').first()).toBeVisible();
> 164 |     await expect(page.locator('span:has-text("resolved")')).first()).toBeVisible();
      |                                                                   ^
  165 |   });
  166 |
  167 |   test('should filter alerts by severity', async ({ page }) => {

